// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default TagImage correctly rendered 1`] = `
<img
  alt="Tag"
  className="tag-img"
  onClick={undefined}
  src="/images/tagimage.png"
/>
`;

exports[`Transparent TagImage correctly rendered 1`] = `
<img
  alt="Tag"
  className="tag-img tag-img-transparent"
  onClick={undefined}
  src="/images/tagimage.png"
/>
`;
